Added Car object

--- a/index.html
+++ b/index.html
@@ -1,5 +1,26 @@
-Hello js rocket
-
-<script type="text/javascript">
-	console.log("Hello world!!!!");
-</script>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>JS Rocket</title>
+	<script type="text/javascript">
+		car = {
+			make:"Subaru",
+			model:"Legacy",
+			colour:"Black",
+			year:2004,
+			isTurnedOn: true,
+			numberOfWheels: 4,
+			seats: [
+				"seat 1",
+				"seat 2",
+				"seat 3",
+				"seat 4"
+			],
+		}
+		console.log("Hello there friends!!!!");
+	</script>
+</head>
+<body>
+	<h1>Hello JS Rocket</h1>
+</body>
+</html>
