Added car.turnOn and turnOff

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 				"seat 3",
 				"seat 4"
 			],
+			turnOn: function() {
+				this.isTurnedOn=true;
+			}
+			turnOff: function() {
+				this.isTurnedOn=false;
+			}
 		}
 		console.log("Hello there friends!!!!");
 	</script>
