--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 			turnOff: function() {
 				this.isTurnedOn=false;
 			},
+			fly: function() {
+				alert("Fly");
+			}
 		};
 		console.log("Hello there friends!!!!");
 	</script>
