--- a/index.html
+++ b/index.html
@@ -2,40 +2,7 @@
 <html>
 <head>
 	<title>JS Rocket</title>
-	<script type="text/javascript">
-		car = {
-			make:"Subaru",
-			model:"Legacy",
-			colour:"Black",
-			year:2004,
-			isTurnedOn: true,
-			numberOfWheels: 4,
-			seats: [
-				"seat 1",
-				"seat 2",
-				"seat 3",
-				"seat 4"
-			],
-			turnOn: function() {
-				this.isTurnedOn=true;
-			},
-			turnOff: function() {
-				this.isTurnedOn=false;
-			},
-			fly: function() {
-				alert("Fly");
-			},
-			switchCar: function(isOn) {
-				console.log("Turn car " + isOn);
-				if(isOn == true) {
-					this.isTurnedOn=true;
-				} else {
-					this.isTurnedOn=false;
-				}
-			}
-		};
-		console.log("Hello there friends!!!!");
-	</script>
+	<script type="text/javascript"> "js/script.js" </script>
 </head>
 <body>
 	<h1>Hello JS Rocket</h1>
