--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>JS Rocket</title>
-	<script type="text/javascript"> "js/script.js" </script>
+	<script type="text/javascript" src = "js/script.js"> </script>
 </head>
 <body>
 	<h1>Hello JS Rocket</h1>
