--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>JS Rocket</title>
 	<script type="text/javascript" src = "js/script.js"> </script>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<h1>Hello JS Rocket</h1>
