--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 	<h1>Hello JS Rocket</h1>
-	<a href="#" onclick="car.fly;">CLICK ME</a>
+	<a href="#" onclick="car.fly();">CLICK ME</a>
 </body>
 </html>
