--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 	<h1>Hello JS Rocket</h1>
-	<a href="#" onclick="car.fly();">CLICK ME</a>
+	<a href="#" onclick="doCoolStuff();">CLICK ME</a>
+	<div class="Cool">
+		<p>Hello I'm cool.</p>
+	</div>
 </body>
 </html>
