--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<h1>Hello JS Rocket</h1>
 	<a href="#" onclick="doCoolStuff();">CLICK ME</a>
-	<div class="Cool">
+	<div class="cool">
 		<p>Hello I'm cool.</p>
 	</div>
 </body>
