--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 	<h1>Hello JS Rocket</h1>
-	<a href="#" onclick="doCoolStuff();">CLICK ME</a>
+	<a href="#" onclick="doCoolStuff();">
+	CLICK ME</a>
+	
 	<div class="cool.green">
 		<p>Hello I'm cool.</p>
 	</div>
