--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<h1>Hello JS Rocket</h1>
 	<a href="#" onclick="doCoolStuff();">
 	CLICK ME</a>
-	
-	<div class="cool.green">
+
+	<div class="cool">
 		<p>Hello I'm cool.</p>
 	</div>
 </body>
