--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<a href="#" onclick="doCoolStuff();">
 	CLICK ME</a>
 
-	<div class="cool">
+	<div class="cool" id="cool">
 		<p>Hello I'm cool.</p>
 	</div>
 </body>
