--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h1>Hello JS Rocket</h1>
-	<a href="#" onclick="doCoolStuff();">CLICK ME</a>
+	<a href="#" onclick="doCoolStuff();">Change Color</a>
 
 	<div class="cool" id="cool">
 		<p>Hello I'm cool.</p>
